fix height on mobile device again

--- a/client/style.css
+++ b/client/style.css
@@ -123,6 +123,8 @@ form {
   display: flex;
   flex-direction: row;
   gap: 10px;
+  position: fixed;
+  bottom: 0;
 }
 
 textarea {
@@ -136,5 +138,18 @@ textarea {
   border-radius: 10px;
   border: none;
   outline: none;
+}
+
+
+button {
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  background: transparent;
+}
+
+form img {
+  width: 30px;
+  height: 30px;
 }
 
